Server in separate folder, separate client config